Grouped imported; variable declaration; instructions for setting up the virtual environment, installing libraries, and running notebooks.

--- a/Simulating_FOWT_Installations_Tool_Source_Code.ipynb
+++ b/Simulating_FOWT_Installations_Tool_Source_Code.ipynb
@@ -7,9 +7,16 @@
    "outputs": [],
    "source": [
     "# 1) Libraries, Project Design Input Parameters, and Calling Metocean Data - Weather Windows\n",
+    "\n",
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import timedelta\n",
+    "from dateutil import parser\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as ticker\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "\n",
     "\n",
     "# Define variables for input parameters and file paths\n",
     "# TODO: These values should be set based on the project design specifications when the cell run and promt user for their input.\n",
@@ -42,7 +49,14 @@
     "wea_weather_data = load_weather_data(WEA_WEATHER_DATA_PATH)\n",
     "\n",
     "# Print the input parameters for confirmation\n",
-    "print(f\"GCR: {GCR}, ACL: {ACL}, P: {P}, NSS: {NSS}\")"
+    "print(f\"GCR: {GCR}, ACL: {ACL}, P: {P}, NSS: {NSS}\")\n",
+    "\n",
+    "# Define outputs \n",
+    "simulation_results_directory = f'' # TODO Add the directory where the simulation results for FOWT installations will be stored, e.g. 'C:\\\\Users\\\\simulation_results_directory'\n",
+    "\n",
+    "# Create the simulation_results_directory if it does not exist\n",
+    "if not os.path.exists(simulation_results_directory):\n",
+    "    os.makedirs(simulation_results_directory)"
    ]
   },
   {
@@ -165,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,10 +410,6 @@
    "outputs": [],
    "source": [
     "# 5) Execution Cell: Simulation Execution and Result Generation\n",
-    "\n",
-    "import pandas as pd\n",
-    "from dateutil import parser\n",
-    "from datetime import timedelta \n",
     "\n",
     "# Function to check if weather conditions are suitable for a given task at a given start time.\n",
     "def is_weather_condition_suitable(task, start_time, port_weather_data, wea_weather_data):\n",
@@ -638,7 +648,8 @@
     "        completed_tasks, task_data = execute_simulation(tasks_info, port_weather_data, wea_weather_data, start_time_str)\n",
     "        \n",
     "        df = pd.DataFrame(task_data)\n",
-    "        excel_path = f'' # TODO Insert results directory for simulation data to be stored and later illustrated, e.g. 'C:\\\\Users\\\\simulation_results_directory\\\\simulation_data_{year}.xlsx'\n",
+    "        # TODO Insert results directory for simulation data to be stored and later illustrated, e.g. 'C:\\\\Users\\\\simulation_results_directory\\\\simulation_data_{year}.xlsx'\n",
+    "        excel_path = os.path.join(simulation_results_directory, f'') \n",
     "        df.to_excel(excel_path, index=False)\n",
     "        print(f\"Results extracted to Excel file at {excel_path}\")\n",
     "        print(f\"Simulation for {year} completed.\")"
@@ -652,17 +663,6 @@
    "source": [
     "# 6) Resulting Graph 1: Project Completion Time and FOWTs Deployed Over the Years and Distribution of Project Completion Times\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.ticker as ticker\n",
-    "import matplotlib.gridspec as gridspec\n",
-    "\n",
-    "# Simulation results directory containing the Excel files\n",
-    "# TODO: Update 'directory' with the path where the Excel result files are located\n",
-    "directory = '' # e.g. 'C:\\\\Users\\\\simulation_results_directory'\n",
-    "\n",
     "# Helper function to extract the year from a file name\n",
     "def extract_year(filename):\n",
     "    parts = filename.split('_')\n",
@@ -675,11 +675,11 @@
     "fowts_deployed_per_year = {}\n",
     "\n",
     "# Loop through each Excel file in the directory\n",
-    "for filename in os.listdir(directory):\n",
+    "for filename in os.listdir(simulation_results_directory):\n",
     "    if filename.endswith('.xlsx'):\n",
     "        year = extract_year(filename)\n",
     "        if year is not None:  # Check if a valid year is found\n",
-    "            df = pd.read_excel(os.path.join(directory, filename))\n",
+    "            df = pd.read_excel(os.path.join(simulation_results_directory, filename))\n",
     "\n",
     "            # Convert 'Start Date' and 'End Date' to datetime objects\n",
     "            df['Start Date'] = pd.to_datetime(df['Start Date'])\n",
@@ -785,16 +785,6 @@
    "source": [
     "# 7) Resulting Graph 2 and Graph 3: Installation Task Performance and Inefficiencies \n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.ticker as ticker\n",
-    "\n",
-    "# Simulation results directory containing the Excel files\n",
-    "# TODO: Update 'directory' with the path where the Excel result files are located\n",
-    "directory = '' # e.g. 'C:\\\\Users\\\\simulation_results_directory'\n",
-    "\n",
     "# Helper function to extract the year from the filename\n",
     "def extract_year(filename):\n",
     "    parts = filename.split('_')\n",
@@ -811,11 +801,11 @@
     "task_delays = {}  # Accumulates total delays for each task\n",
     "\n",
     "# Loop through each Excel file in the directory\n",
-    "for filename in os.listdir(directory):\n",
+    "for filename in os.listdir(simulation_results_directory):\n",
     "    if filename.endswith('.xlsx'):\n",
     "        year = extract_year(filename)\n",
     "        if year:  # Ensure a valid year is found\n",
-    "            df = pd.read_excel(os.path.join(directory, filename))\n",
+    "            df = pd.read_excel(os.path.join(simulation_results_directory, filename))\n",
     "\n",
     "            # Convert 'Start Date' and 'End Date' to datetime objects\n",
     "            df['Start Date'] = pd.to_datetime(df['Start Date'])\n",
@@ -936,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
